syntax = "proto3";

option csharp_namespace = "UserService.Grpc";

package user;

service User {
  rpc Login (LoginRequest) returns (UserResponse);
  rpc Register (RegisterRequest) returns (UserResponse);
  rpc EmailToUid (EmailToUidRequest) returns (UserResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message UserResponse {
  string id = 1;
  string email = 2;
}

message EmailToUidRequest {
    string email = 1;
}